# swagger-spec.yaml
@@ -12,7 +12,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ArticleFindAllRes'
+                  $ref: '#/components/schemas/ArticleFindAllResponse'
       tags: &ref_0
         - articles
   /v1/articles/{userId}:
@@ -55,7 +55,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ArticleFindOneRes'
+                $ref: '#/components/schemas/ArticleFindOneResponse'
         '401':
           description: Unauthorized
       tags: *ref_0
@@ -159,7 +159,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserFetchUserRes'
+                $ref: '#/components/schemas/UserFetchUserResponse'
         '401':
           description: Unauthorized
       tags: &ref_3
@@ -183,7 +183,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/UserFetchUsersArticlesRes'
+                  $ref: '#/components/schemas/UserFetchUsersArticlesResponse'
         '401':
           description: Unauthorized
       tags: *ref_3
@@ -204,7 +204,7 @@ components:
       bearerFormat: JWT
       type: http
   schemas:
-    ArticleFindAllRes:
+    ArticleFindAllResponse:
       type: object
       properties:
         id:
@@ -227,7 +227,7 @@ components:
       required:
         - title
         - content
-    ArticleFindOneRes:
+    ArticleFindOneResponse:
       type: object
       properties:
         id:
@@ -256,7 +256,7 @@ components:
           type: string
       required:
         - name
-    UserFetchUserRes:
+    UserFetchUserResponse:
       type: object
       properties:
         id:
@@ -266,16 +266,13 @@ components:
       required:
         - id
         - name
-    UserFetchUsersArticlesRes:
+    UserFetchUsersArticlesResponse:
       type: object
       properties:
         id:
           type: string
         title:
           type: string
-        content:
-          type: string
       required:
         - id
         - title
-        - content
